Added human readable webpage. Updated docs.

--- a/provision/szmon.conf
+++ b/provision/szmon.conf
@@ -6,5 +6,5 @@ stop on runlevel [016]
 
 
 respawn
-
-exec python /vagrant/source/localserver.py
+chdir /vagrant/source/
+exec python localserver.py
